# fukbot

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
src/: bot.py  example.config.yaml
src/fukbot/: __init__.py  agent.py  client.py  ext.py  flags.py  logging.py  plugin_help.py  utils.py
src/plugins/: __init__.py
src/plugins/echo/: __init__.py  echo.py
src/plugins/ping/: __init__.py  ping.py
